Update Report Style

--- a/sr_print_pos_session/i18n/ar.po
+++ b/sr_print_pos_session/i18n/ar.po
@@ -15,7 +15,9 @@ msgstr ""
 "Plural-Forms: nplurals=6; plural=(n==0 ? 0 : n==1 ? 1 : n==2 ? 2 : n%100>=3 && n%100<=10 ? 3 : n%100>=11 && n%100<=99 ? 4 : 5);\n"
 "X-Generator: Poedit 2.2\n"
 "Last-Translator: \n"
-"Language: ar\n"
+"Language: ar_SY\n"
+"X-Poedit-Basepath: .\n"
+"X-Poedit-SearchPath-0: ar.po\n"
 
 #. module: sr_print_pos_session
 #: model:ir.ui.view,arch_db:sr_print_pos_session.pos_session_report_template
